apps_v1/argocd/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: unified-gateway
  namespace: argocd
spec:
  selector:
     app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "argocd.local"
# HTTPS (your main fix)
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: wildcard-local-tls   # 👈 your secret name
      hosts:
        - "argocd.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - "argocd.local"
  gateways:
    - unified-gateway
  http:
    - match:
        - uri:
            prefix: /
      headers:
        request:
          set:
            X-Forwarded-Proto: https
            X-Forwarded-Port: "443"
            X-Forwarded-Host: argocd.local
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
